k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gsapp-svc
spec:
  selector:
    app: gsapp
  ports:
  - port: 3300
    targetPort: 3000
