k8s/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  labels:
    app.kubernetes.io/name: dash-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: dashboard.gsapp.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 80
