k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gsapp-ingress
spec:
  rules:
  - host: gsapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gsapp-svc
            port:
              number: 3300
